--- a/FBbox/index.html
+++ b/FBbox/index.html
@@ -37,7 +37,7 @@
     
     <div id="announcement" >
         <div class="announcement_list">
-        <i class="fa fa-users entirecompanyicon padding "></i>Entire Company <i class="fa fa-times padding remove_icon"></i>
+        <i class="fa fa-users entirecompany_icon padding "></i>Entire Company <i class="fa fa-times padding remove_icon"></i>
         </div>
         <div class="announcement_list">
         ntthuy@gmail.com <i class="fa fa-times padding remove_icon"></i>
