--- a/FBbox/uploadafile.html
+++ b/FBbox/uploadafile.html
@@ -8,14 +8,14 @@
 <body>
 <div id="main_container">
     <div id="form-control">
-        <textarea class="form-control share-widget-textarea" tabindex="1" placeholder="Conduct 360-degree feedback" rows="3"></textarea>
+        <textarea class="form-control share-widget-textarea" tabindex="1" placeholder="What do you want to share?" rows="3"></textarea>
     </div>   
       <div id="upload_file">
-      <div id="upload_file_left">  <img class="image_wrap" src="image.jpg" width="40" height="40"  alt=""/> file name  <p class="upload_message"> File upload uccessfull<p> </div>
+      <div id="upload_file_left">  <img class="image_wrap" src="image.jpg" width="40" height="40"  alt=""/> File name  <p class="upload_message"> File attached successfully<p> </div>
         <div class="fa fa-times padding remove_icon remove_icon_upload"></div>
     </div>  
      <div id="upload_file">
-      <div id="upload_file_left">  <img class="image_wrap" src="image.jpg" width="40" height="40"  alt=""/> file name  <p class="upload_message"> File upload uccessfull<p> </div>
+      <div id="upload_file_left">  <img class="image_wrap" src="image.jpg" width="40" height="40"  alt=""/> File name  <p class="upload_message"> File attached successfully<p> </div>
         <div class="fa fa-times padding remove_icon remove_icon_upload"></div>
     </div> 
     
